@@ -9,6 +9,8 @@ PHP                                                                        NEWS
     In case of modification of corresponding registry-tree PHP will reload
     it automatic
   . start timiout thread only if necessary
+- ext/bcmath intialization code is moved from request startup to module
+  startup. (Dmitry)
 - Zend Memory Manager Improvements (Dmitry)
   . use HeapAlloc() instead of VirtualAlloc()
   . use "win32" storage manager (instead of "malloc") on Windows by default
